Intro to Apex/Let'sdothis/force-app/main/default/objects/Purchase_Info__c/Purchase_Info__c.object-meta.xml
<CustomObject>
    <label>Purchase Info</label>
    <nameField>
        <label>Purchase Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>