Intro to Apex/Let'sdothis/force-app/main/default/objects/Purchase_Info__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Billing City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>