Intro to Apex/Let'sdothis/force-app/main/default/objects/Purchase_Info__c/fields/Billing_different_from_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Billing_different_from_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing different from Shipping</label>
    <type>Checkbox</type>
</CustomField>