Intro to Apex/Let'sdothis/force-app/main/default/objects/Purchase_Info__c/fields/Shipping_ZipCode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_ZipCode__c</fullName>
    <label>Shipping ZipCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>